--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     }
   ],
   "require": {
-    "php": ">=7.2",
-    "slevomat/coding-standard": "^6.2",
+    "php": "^7.2 || ^8.0",
+    "slevomat/coding-standard": "^7.0",
     "squizlabs/php_codesniffer": "^3.3"
   },
   "autoload": {
