--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,17 @@
   ],
   "require": {
     "php": "^7.2 || ^8.0",
-    "slevomat/coding-standard": "^7.0",
+    "slevomat/coding-standard": "^8.0",
     "squizlabs/php_codesniffer": "^3.3"
   },
   "autoload": {
     "psr-4": {
       "Letsgoi\\CodeStyle\\": "src"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": false
     }
   }
 }
